@@ -1,7 +1,5 @@
 package uk.gov.hmcts.reform.fpl.controllers;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.autoconfigure.OverrideAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
@@ -11,12 +9,16 @@ import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.fpl.model.CaseData;
 import uk.gov.hmcts.reform.fpl.model.Respondent;
 import uk.gov.hmcts.reform.fpl.model.RespondentParty;
+import uk.gov.hmcts.reform.fpl.model.common.Element;
 
-import java.time.LocalDate;
+import java.util.List;
 import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static uk.gov.hmcts.reform.fpl.enums.YesNo.YES;
 import static uk.gov.hmcts.reform.fpl.utils.CoreCaseDataStoreLoader.callbackRequest;
+import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.element;
+import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.wrapElements;
 
 @ActiveProfiles("integration-test")
 @WebMvcTest(RespondentController.class)
@@ -43,19 +45,11 @@ class RespondentControllerTest extends AbstractControllerTest {
     @Test
     void shouldReturnDateOfBirthErrorsForRespondentWhenFutureDateOfBirth() {
         CaseDetails caseDetails = CaseDetails.builder()
-            .id(12345L)
-            .data(ImmutableMap.of(
-                "respondents1", ImmutableList.of(
-                    ImmutableMap.of(
-                        "id", "",
-                        "value", Respondent.builder()
-                            .party(RespondentParty.builder()
-                                .dateOfBirth(LocalDate.now().plusDays(1))
-                                .build())
-                            .build()
-                    )
-                )
-            ))
+            .data(Map.of("respondents1", wrapElements(Respondent.builder()
+                .party(RespondentParty.builder()
+                    .dateOfBirth(dateNow().plusDays(1))
+                    .build())
+                .build())))
             .build();
 
         AboutToStartOrSubmitCallbackResponse callbackResponse = postMidEvent(caseDetails);
@@ -66,27 +60,7 @@ class RespondentControllerTest extends AbstractControllerTest {
     @Test
     void shouldReturnDateOfBirthErrorsForRespondentWhenThereIsMultipleRespondents() {
         CaseDetails caseDetails = CaseDetails.builder()
-            .id(12345L)
-            .data(ImmutableMap.of(
-                "respondents1", ImmutableList.of(
-                    ImmutableMap.of(
-                        "id", "",
-                        "value", Respondent.builder()
-                            .party(RespondentParty.builder()
-                                .dateOfBirth(LocalDate.now().plusDays(1))
-                                .build())
-                            .build()
-                    ),
-                    ImmutableMap.of(
-                        "id", "",
-                        "value", Respondent.builder()
-                            .party(RespondentParty.builder()
-                                .dateOfBirth(LocalDate.now().plusDays(1))
-                                .build())
-                            .build()
-                    )
-                )
-            ))
+            .data(Map.of("respondents1", buildRespondents()))
             .build();
 
         AboutToStartOrSubmitCallbackResponse callbackResponse = postMidEvent(caseDetails);
@@ -97,19 +71,11 @@ class RespondentControllerTest extends AbstractControllerTest {
     @Test
     void shouldReturnNoDateOfBirthErrorsForRespondentWhenValidDateOfBirth() {
         CaseDetails caseDetails = CaseDetails.builder()
-            .id(12345L)
-            .data(ImmutableMap.of(
-                "respondents1", ImmutableList.of(
-                    ImmutableMap.of(
-                        "id", "",
-                        "value", Respondent.builder()
-                            .party(RespondentParty.builder()
-                                .dateOfBirth(LocalDate.now().minusDays(1))
-                                .build())
-                            .build()
-                    )
-                )
-            ))
+            .data(Map.of("respondents1", wrapElements(Respondent.builder()
+                .party(RespondentParty.builder()
+                    .dateOfBirth(dateNow().minusDays(1))
+                    .build())
+                .build())))
             .build();
 
         AboutToStartOrSubmitCallbackResponse callbackResponse = postMidEvent(caseDetails);
@@ -118,13 +84,57 @@ class RespondentControllerTest extends AbstractControllerTest {
     }
 
     @Test
-    void aboutToSubmitShouldAddConfidentialRespondentsToCaseDataWhenConfidentialRespondentsExist() throws Exception {
+    void shouldSetPersistRepresentativesFlagToYesOnRespondents() {
+        CaseDetails caseDetails = CaseDetails.builder()
+            .data(Map.of("respondents1", buildRespondents()))
+            .build();
+
+        AboutToStartOrSubmitCallbackResponse callbackResponse 
+            = postMidEvent(caseDetails, "persist-representatives");
+
+        CaseData caseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
+        Respondent firstRespondent = caseData.getRespondents1().get(0).getValue();
+        Respondent secondRespondent = caseData.getRespondents1().get(0).getValue();
+
+        assertThat(firstRespondent.getPersistRepresentedBy()).isEqualTo(YES.getValue());
+        assertThat(secondRespondent.getPersistRepresentedBy()).isEqualTo(YES.getValue());
+    }
+
+    @Test
+    void aboutToSubmitShouldAddConfidentialRespondentsToCaseDataWhenConfidentialRespondentsExist() {
         AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToSubmitEvent(callbackRequest());
         CaseData caseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
         CaseData initialData = mapper.convertValue(callbackRequest().getCaseDetails().getData(), CaseData.class);
 
-        assertThat(caseData.getConfidentialRespondents()).containsOnly(initialData.getAllRespondents().get(0));
-        assertThat(caseData.getRespondents1().get(0).getValue().getParty().address).isNull();
-        assertThat(caseData.getRespondents1().get(1).getValue().getParty().address).isNotNull();
+        assertThat(caseData.getConfidentialRespondents())
+            .containsOnly(retainConfidentialDetails(initialData.getAllRespondents().get(0)));
+
+        assertThat(caseData.getRespondents1().get(0).getValue().getParty().getAddress()).isNull();
+        assertThat(caseData.getRespondents1().get(1).getValue().getParty().getAddress()).isNotNull();
+    }
+
+    private List<Element<Respondent>> buildRespondents() {
+        return wrapElements(Respondent.builder()
+                .party(RespondentParty.builder()
+                    .dateOfBirth(dateNow().plusDays(1))
+                    .build())
+                .build(),
+            Respondent.builder()
+                .party(RespondentParty.builder()
+                    .dateOfBirth(dateNow().plusDays(1))
+                    .build())
+                .build());
+    }
+
+    private Element<Respondent> retainConfidentialDetails(Element<Respondent> respondent) {
+        return element(respondent.getId(), Respondent.builder()
+            .party(RespondentParty.builder()
+                .firstName(respondent.getValue().getParty().getFirstName())
+                .lastName(respondent.getValue().getParty().getLastName())
+                .address(respondent.getValue().getParty().getAddress())
+                .telephoneNumber(respondent.getValue().getParty().getTelephoneNumber())
+                .email(respondent.getValue().getParty().getEmail())
+                .build())
+            .build());
     }
 }
